# x1brainsv1

./: .gitignore  Anchor.toml  BOT_ADMIN_PREVIEW.html  BOT_README.md  DEPLOY.md  DEPLOY_FARM.md  DEPLOY_LOG.md  DEPLOY_LOG_FARM.md  INTEGRATION-FROM-X1CITY.md  MOCKUP.html  PROGRAMS_REFERENCE.md  PROJECT.md  README.md  SUPABASE_MARKET_STATS.sql  SUPABASE_NFT_METADATA.sql  SUPABASE_SCHEMA.sql  SUPABASE_SCHEMA_BOOSTS.sql  SUPABASE_SPOTLIGHT.sql  SUPABASE_TODO.md  brainsbot.md  check.js  check_tokens.js  collect_lb_fees.js  gettx.js  gettx2.js  gettx3.js  gettx4.js  gettx5.js  index.html  initialize_protocol.js  inspect_gs.js  manual_delist.js  migrationdoc.md  my_tx_history.txt  package-lock.json  package.json  seed_brains_pools.js  seed_pools.js  update_tier_rates.js  vercel.json  (+7 more)
api/: _bot-actions.ts  admin.ts  cron-collect-lb-fees.ts  cron-snapshot.ts
bot/: Dockerfile  bot.py  config.py  events.py  fly.toml  fly.toml.bak  messages.py  prices.py  requirements.txt  storage.py  test_events.py  x1_rpc.py
brains_pairing/: Anchor.toml  Cargo.toml
brains_pairing/programs/brains_pairing/: Cargo.toml
brains_pairing/programs/brains_pairing/src/: constants.rs  errors.rs  lib.rs  state.rs
brains_pairing/programs/brains_pairing/src/instructions/: admin.rs  create_listing.rs  edit_listing.rs  emergency.rs  initialize.rs  match_listing.rs  mod.rs  seed_pool.rs
programs/brains_farm/: Cargo.toml  README.md
programs/brains_farm/src/: accumulator.rs  constants.rs  errors.rs  lib.rs  state.rs
programs/brains_farm/src/instructions/: admin.rs  claim.rs  close_farm.rs  create_farm.rs  force_mature_position.rs  fund_farm.rs  initialize_global.rs  mod.rs  stake.rs  unstake.rs
programs/brains_pairing/: Cargo.toml
programs/brains_pairing/src/: constants.rs  lib.rs  state.rs
programs/brains_pairing/src/instructions/: create_listing.rs  delist.rs  edit_listing.rs  emergency.rs  initialize.rs  match_listing.rs  seed_pool.rs
programs/labwork_marketplace/: Cargo.toml
programs/labwork_marketplace/src/: lib.rs
programs/lb_mint/: Cargo.toml
programs/lb_mint/src/: lib.rs
scripts/: check_mint.ts  check_program.ts  create-brains-farms.js  deploy-brains-farm.sh  deploy-brains-pairing.sh  farm-stats.js  fund-brains-farms.js  initialize-farm-global.js  initialize-lb-mint.ts  update-metadata-uri.ts  verify_xdex_seeds.js
src/: App.css  App.tsx  index.css  main.tsx  polyfills.ts
src/components/: ActivityLog.tsx  BurnLeaderboard.tsx  BurnPortal.tsx  BurnedBrainsBar.tsx  ErrorBoundary.tsx  Header.tsx  LBComponents.tsx  MintLabWork.tsx  NFTComponents.tsx  NetworkStats.tsx  Portfolio.tsx  PortfolioChart.tsx  PortfolioShareCard.tsx  SendPanel.tsx  Sidebar.tsx  SwapCard.tsx  TokenComponents.tsx  UI.tsx  V2AnalyticsPanel.tsx  V2BoostModal.tsx  V2BotPanel.tsx  V2BurnDashboard.tsx  V2BurnLeaderboard.tsx  V2BurnPanel.tsx  V2BurnTransactions.tsx  V2FarmModal.tsx  V2Layout.tsx  V2MarketModal.tsx  V2MarketplaceStats.tsx  V2NFTDetailModal.tsx  V2NFTImage.tsx  V2NfaConsent.tsx  V2PageHeader.tsx  V2PortfolioStats.tsx  V2XdexPoolsList.tsx  X1BChat.tsx  XenBlocksPanel.tsx  incineratorThemes.ts
src/constants/: index.ts
src/hooks/: usePageView.ts
tests/: labwork_marketplace.ts
(+59 files in other folders)
