[package]
name = "labwork_marketplace"
version = "0.1.0"
description = "LabWork NFT Marketplace — list, buy, cancel with fees"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "labwork_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl  = "0.31.1"
