[package]
name = "lb_mint"
version = "0.1.0"
description = "Lab Work (LB) Token-2022 Mint"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lb_mint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang         = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl          = { version = "0.31.1", features = ["token", "token_2022", "token_2022_extensions"] }
solana-security-txt = "1.1.1"
